# Canary-Framework

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  README_EN.md  README_ZH.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  sync-wiki.yml
.trae/documents/: swagger_open_questions_plan.md
.trae/specs/swagger-integration/: checklist.md  spec.md  tasks.md
canary_framework/: __init__.py
canary_framework/core/decorators/: module.py
canary_framework/core/engine/: canary.py
canary_framework/web/fastapi/: web_canary.py
canary_framework/web/fastapi/decorators/: web.py
cf/: __init__.py
cf/core/: __init__.py
cf/core/context/: module_ctx.py  service_ctx.py
cf/core/decorators/: config.py  lifecycle.py  module.py  service.py
cf/core/engine/: canary.py  context.py  injector.py  sorter.py
cf/core/registry/: registry.py
cf/core/utils/: naming.py
cf/web/fastapi/: __init__.py  context.py  web_canary.py
cf/web/fastapi/decorators/: router.py  web.py
dev/: canary-framework-openapi-bug-report.md  canary-framework-openapi-redesign.md
docs/: index.md
docs/en/: api-reference.md  configuration.md  core-concepts.md  core.md  dependency-injection.md  fastapi.md  index.md  lifecycle.md  modules.md  quickstart.md  services.md  web-integration.md  web.md  whats-new.md
docs/superpowers/plans/: 2026-06-30-router-redesign.md
docs/superpowers/specs/: 2026-06-30-router-redesign-design.md
docs/zh/: api-reference.md  configuration.md  core-concepts.md  core.md  dependency-injection.md  fastapi.md  index.md  lifecycle.md  modules.md  quickstart.md  services.md  web-integration.md  web.md  whats-new.md
example/: main.py  minimal.py  pyproject.toml
example/service/dataset/: dataset_admin_service.py  dataset_config.py  dataset_router.py  dataset_service.py
example/service/db/: db_config.py  db_service.py
example/service/user/: user_config.py  user_router.py  user_service.py
examples/: 01_standalone.py  02_module_compose.py  03_nested_modules.py  04_module_router.py  05_config.py  06_lifecycle.py  07_validation.py  08_parameters.py  09_openapi.py  10_full_app.py  blog_app.py
examples/multi_module/: pyproject.toml  run_app.py  run_standalone_web.py
examples/multi_module/app_module/: __init__.py  config.py  module.py
examples/multi_module/app_module/router/: __init__.py  health_router.py
examples/multi_module/blog_service/: __init__.py  config.py  module.py
examples/multi_module/blog_service/router/: __init__.py  blog_router.py
examples/multi_module/blog_service/service/: __init__.py  blog.py
examples/multi_module/echo_service/: __init__.py  config.py  module.py
examples/multi_module/echo_service/router/: __init__.py  echo_router.py
examples/multi_module/echo_service/service/: __init__.py  echo.py
examples/multi_module/standalone/: __init__.py  config.py  module.py
examples/multi_module/standalone/service/: __init__.py  notify.py
examples/multi_module/user_module/: __init__.py  config.py  module.py
examples/multi_module/user_module/router/: __init__.py  user_router.py
examples/multi_module/user_module/service/: __init__.py  auth.py  user.py
src/canary_framework/: __init__.py  canary.py  exceptions.py
src/canary_framework/common/: __init__.py  _logging.py  _types.py  config.py  enums.py  errors.py  exceptions.py  logging.py  markers.py  routing.py  types.py
src/canary_framework/core/: __init__.py  dependencies.py  module.py  params.py  router.py  service.py
src/canary_framework/core/algorithms/: __init__.py  injector.py  naming.py  sorter.py
src/canary_framework/core/conductor/: __init__.py  canary.py  context.py
src/canary_framework/core/container/: __init__.py  registry.py
src/canary_framework/core/decorators/: config.py  lifecycle.py  module.py  service.py  trace.py
src/canary_framework/core/engine/: canary.py  context.py  injector.py  sorter.py
src/canary_framework/core/module/: __init__.py  _base.py
src/canary_framework/core/registry/: registry.py
src/canary_framework/core/router/: __init__.py  _base.py  _utils.py
src/canary_framework/core/service/: __init__.py  _base.py  _hooks.py
src/canary_framework/core/utils/: naming.py
src/canary_framework/core/web/: openapi.py  router.py
src/canary_framework/decorators/: __init__.py  config.py  lifecycle.py  module.py  router.py  service.py
src/canary_framework/decorators/module/: __init__.py
src/canary_framework/engine/: __init__.py  dependencies.py  hooks.py  injector.py  logging.py  openapi.py  params.py  registry.py  utils.py
src/canary_framework/web/fastapi/: __init__.py  (+1 more)
tests/: conftest.py  test_canary.py  test_config.py  test_context.py  test_exceptions.py  test_injector.py  test_lifecycle.py  test_naming.py  test_registry.py  test_sorter.py
tests/function/: test_concurrent.py  test_full_app.py  test_performance.py  test_web_e2e.py
tests/functional/: test_assembly.py  test_async_operations.py  test_complex_app.py  test_edge_cases.py  test_module_flat.py  test_module_nesting.py  test_module_router.py  test_openapi_docs.py  test_perf_startup.py  test_request_binding.py  test_simple_app.py  test_standalone.py
tests/integration/: test_canary.py  test_context.py  test_dependency_injection.py  test_injector.py  test_lifecycle.py  test_module_registry.py  test_registry.py  test_route_collection.py  test_routing.py  test_sorter.py  test_web.py  test_web_canary.py
tests/unit/: test_config.py  test_errors.py  test_exceptions.py  test_hooks.py  test_injector.py  test_lifecycle.py  test_lifecycle_decorators.py  test_logging.py  test_markers.py  test_module.py  test_module_decorator.py  test_naming.py  test_openapi.py  test_registry.py  test_router.py  test_router_bug.py  test_router_decorator.py  test_router_deps_annotation.py  test_service.py  test_service_decorator.py  test_trace.py  test_types.py  test_utils.py
(+6 files in other folders)
