[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "canary-framework"
version = "0.1.1"
description = "Canary Framework —— 轻量级 Python 服务框架"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.3",
]
readme = "README.md"
license = { text = "Apache-2.0" }
keywords = ["framework", "service", "dependency-injection", "fastapi", "web"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
authors = [
    { name = "张文博 (Canary)", email = "Hotcocoa.Canary@outlook.com" },
]
urls = { Repository = "https://github.com/HotcocoaCanary/Canary-Framework" }

[project.optional-dependencies]
web = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "fastapi.*",
    "uvicorn.*",
    "pydantic_settings.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/canary_framework"]
omit = ["tests/*", "example/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.hatch.build.targets.wheel]
packages = ["src/canary_framework"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
]
