[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "canary-framework"
version = "0.3.0"
description = "Canary Framework — lightweight decorator-driven Python service framework"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.3",
]
readme = "README.md"
license = { text = "Apache-2.0" }
keywords = [
    "framework",
    "service",
    "dependency-injection",
    "fastapi",
    "web",
    "decorator",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Framework :: FastAPI",
]

[[project.authors]]
name = "张文博 (Canary)"
email = "Hotcocoa.Canary@outlook.com"

[project.urls]
Repository = "https://github.com/HotcocoaCanary/Canary-Framework"
Documentation = "https://github.com/HotcocoaCanary/Canary-Framework/wiki"
Issues = "https://github.com/HotcocoaCanary/Canary-Framework/issues"
Changelog = "https://github.com/HotcocoaCanary/Canary-Framework/blob/main/CHANGELOG.md"

[project.optional-dependencies]
web = ["fastapi>=0.115", "uvicorn>=0.34"]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5", "mkdocs-static-i18n>=1.3"]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: Unit tests — isolated, no framework engine needed.",
    "integration: Integration tests — multiple components working together.",
    "functional: Functional tests — end-to-end user scenarios.",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = ["E501", "RUF001", "RUF002", "RUF003"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "pydantic_settings.*",
    "fastapi.*",
    "uvicorn.*",
]
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/canary_framework"]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocs-static-i18n>=1.3.1",
    "mypy>=2.1.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
]
