[project]
name = "canary-multi-module-demo"
version = "0.1.0"
description = "Multi-module demo showing Canary Framework module composition and WebCanary"
requires-python = ">=3.12"
dependencies = [
    "canary-framework[web]",
]

[tool.uv.sources]
canary-framework = { path = "../..", editable = true }
